--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Delivey App</title>
+    <title>Food delivery app</title>
 </head>
 <body>
-    <div id="root">hi</div>
+    <div id="root">"i am a h tag"</div>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
